# emergent

./: .gitignore  Makefile  README.md  emergent_demo.ipynb  justfile  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
dashboard/: README.md  __init__.py  main.py  run.sh
dashboard/static/css/: style.css
dashboard/static/js/: dashboard.js
dashboard/templates/: dashboard.html
mlruns/0/: meta.yaml
mlruns/409361739599493380/: meta.yaml
mlruns/409361739599493380/14fd7151215d47dfaf6c28ae14d1e0a6/: meta.yaml
mlruns/409361739599493380/2f303dbb0d69468dbe33ab6e153fb300/: meta.yaml
mlruns/409361739599493380/3b7c93db9a384f449b1a15930e98cad3/: meta.yaml
mlruns/409361739599493380/4beb8dc475184181b0ca4d34662ea446/: meta.yaml
mlruns/409361739599493380/b054c4d3f2fc468395df9257a4ab41a5/: meta.yaml
mlruns/409361739599493380/d671866fdfd043f5b07b9d65cf43ea04/: meta.yaml
src/langlab/: __init__.py  ablate.py  agents.py  analysis.py  app.py  channel.py  cli.py  config.py  contact.py  data.py  eval.py  grid.py  grounding.py  population.py  report.py  train.py  train_grounded.py  utils.py  world.py
tests/: README.md  conftest.py  test_agents.py  test_analysis.py  test_data.py  test_eval.py  test_heatmap_io.py  test_multimodal.py  test_population.py  test_pragmatics.py  test_report.py  test_reproducibility.py  test_sequences.py  test_train_smoke.py  test_vocab_stats.py  test_world.py
tests/integration/: test_ablate.py  test_app_smoke.py  test_cli.py  test_contact.py  test_e2e.py  test_eval.py  test_population.py  test_report.py  test_reproducibility.py  test_train_smoke.py  test_training.py
tests/unit/: test_ablate.py  test_agents.py  test_analysis.py  test_app.py  test_basic.py  test_cli.py  test_contact.py  test_data.py  test_ensemble.py  test_ensemble_training.py  test_entropy_bonus.py  test_eval.py  test_grid.py  test_grounding.py  test_heatmap_io.py  test_improved_agents.py  test_improved_train.py  test_loss_shapes.py  test_meta_agents.py  test_multimodal.py  test_pragmatics.py  test_report.py  test_sequences.py  test_splits.py  test_train_grounded.py  test_training_grid.py  test_vocab_stats.py  test_world.py
(+43 files in other folders)
